Added Introduction to Notebook and removed unnecessary imports

--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -1,54 +1,53 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 236,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     /Users/ramitgoolry/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
-      "[nltk_data]     /Users/ramitgoolry/nltk_data...\n",
-      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
-      "[nltk_data]       date!\n"
-     ]
-    }
-   ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib as mpl\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import datetime, nltk, warnings\n",
-    "import matplotlib.cm as cm\n",
-    "import itertools\n",
-    "import nltk\n",
-    "nltk.download('punkt')\n",
-    "nltk.download('averaged_perceptron_tagger')\n",
-    "from pathlib import Path\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.cluster import KMeans\n",
-    "from sklearn.metrics import silhouette_samples, silhouette_score\n",
-    "from sklearn import preprocessing, model_selection, metrics, feature_selection\n",
-    "from sklearn.model_selection import GridSearchCV, learning_curve\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn import neighbors, linear_model, svm, tree, ensemble\n",
-    "from wordcloud import WordCloud, STOPWORDS\n",
-    "from sklearn.ensemble import AdaBoostClassifier\n",
-    "from sklearn.decomposition import PCA\n",
-    "from IPython.display import display, HTML\n",
-    "import folium\n",
-    "from folium import plugins\n",
-    "import re\n",
-    "from pygeocoder import Geocoder\n",
-    "import json"
+    "# Group 061 Final Project : Traffic Collisions in San Diego"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Science Questions\n",
+    "\n",
+    "What are the most dangerous places and times to drive throughout the year? More specifically, we are curious about which factors in particular can predict the likelihood of accidents occurring. We know there are probably certain factors that predict accident likelihood, listed below in the hypothesis, however we would like to see through our data analysis if there may be other factors that predict accident likelihood.\n",
+    "\n",
+    "# Hypothesis\n",
+    "We believe that there are a number of factors that are likely to predict a higher probability of accidents in certain areas. These factors include:\n",
+    "- The time of day - Based on influences such as low visibility and drowsiness, it is likely that accidents are more likely to occur at night.\n",
+    "- Time of the year -  During the holidays there tends to be more people on the roads and increased instances of DUI, there is likely to be increased accidents during these times.\n",
+    "- Police presence - People tend to drive slower and more carefully around police cars and more diligent in obeying traffic laws. Therefore accidents, especially those involving traffic violations are less likely to occur in areas of higher police presence.\n",
+    "- Quality of road infrastructure - Indicators of bad road infrastructure and maintenance such as potholes or unclear or deteriorating road indicators and signs are likely to cause either confusion or loss of control while driving, therefore leading to increased instances of traffic collisions.\n",
+    "- Location - there are a number of effects of living or driving in a certain location whether it be the average age of the people in the group, the buildings in the area (day life and nightlife), and possibly the type of people who live in that area (single, married, family, young adults)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd # DataFrames, Series\n",
+    "import numpy as np # Math Module\n",
+    "import matplotlib.pyplot as plt # Plotting\n",
+    "import seaborn as sns # Plotting\n",
+    "import datetime # Datetime \n",
+    "import folium # Folium Map\n",
+    "from folium import plugins # Folium Heatmap\n",
+    "from pygeocoder import Geocoder # Geocoding\n",
+    "import json # Reading JSON files\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -268,7 +267,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extraction of Locations from Dataset"
+    "# Location"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extraction of Locations from Dataset"
    ]
   },
   {
@@ -343,7 +349,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Map"
+    "## Map"
    ]
   },
   {
