--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "4  MISDEMEANOR  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,10 +560,131 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysis\n",
+    "## EDA\n",
     "\n",
-    "TODO"
+    "#### Dataset Description:\n",
+    "\n",
+    "In this project, we are using the car collision dataset from San Diego Government Web Page. We are using their user-related data form 2017 to 2019. We use the data from all months to analysis the collision pattern within all counties of San Diego. \n",
+    "\n",
+    "\n",
+    "The reason of why we chose this dataset is that this data set contains information of collisions from the whole San Diego City, which has a large amount of population for our analysis. Also, this dataset is an official dataset, which means that its information is relatively accurate.\n",
+    "\n",
+    "\n",
+    "The dataset includes 16 different features in a total of 28595 data entries.\n",
+    "\n",
+    "\n",
+    "*report_id* : The unique ID of the report of each accident.\n",
+    "\n",
+    "*data_time* : The date and time of the accident.\n",
+    "\n",
+    "*police_beat* : The territory and time that a police officer patrols.\n",
+    "\n",
+    "*address_number_primary* : The primary address number.\n",
+    "\n",
+    "*address_pd_primary* : The primary address direction (W/S/N/E).\n",
+    "\n",
+    "*address_road_primary* : The primary road name.\n",
+    "\n",
+    "*address_sfx_primary* & *address_pd_intersecting* & *address_name_intersecting* & *address_sfx_intersecting* : Other address information.\n",
+    "\n",
+    "*violation_section* : California Vehicle Code Violations.\n",
+    "\n",
+    "https://www.dmv.ca.gov/portal/dmv/?1dmy&urile=wcm:path:/dmv_content_en/dmv/dl/vioptct\n",
+    "\n",
+    "*violation_type* : The Type of Violation (VC/PC/MC/ZZ/CO/HS)\n",
+    "\n",
+    "*charge_desc* : The charge description, which descripts each charge. Based on the research, the description is based on the violation section.\n",
+    "\n",
+    "*injured* : Number of injuries( Max: 180, Min: 0, Mean: 0.59 )\n",
+    "\n",
+    "*killed* : Number of Death( Max: 3, Min: 0, Mean: 0.00465 )\n",
+    "\n",
+    "*hit_run_lvl*: Level of severity if the collsion is a hit-run. (MISDEMEANOR/FELONY)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, check the missingness of the dataset:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "report_id                    0.000000\n",
+       "date_time                    0.000000\n",
+       "police_beat                  0.000000\n",
+       "address_number_primary       0.000000\n",
+       "address_pd_primary           0.000000\n",
+       "address_road_primary         0.000000\n",
+       "address_sfx_primary          0.000140\n",
+       "address_pd_intersecting      0.000000\n",
+       "address_name_intersecting    0.000000\n",
+       "address_sfx_intersecting     0.000350\n",
+       "violation_section            0.000000\n",
+       "violation_type               0.000000\n",
+       "charge_desc                  0.000000\n",
+       "injured                      0.000000\n",
+       "killed                       0.000000\n",
+       "hit_run_lvl                  0.533905\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()/28595"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We noticed that there is a significant amount of missing values in hit_run_lvl, which is around 53.3905% of the total entries. Hence, we print out unique values of hit_run_lvl:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['MISDEMEANOR', nan, 'FELONY'], dtype=object)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.hit_run_lvl.unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are only three unique values, and two of them represent levels of severity of hit-run collisions, and the other one represents it is not a hit-run. Hence, its missing type is missing by design (MD). We should not impute it since it is designed to miss."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -665,7 +786,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
