Changed markdown to include Locations.csv description

--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -322,18 +322,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "MAPS_API_KEY = 'AIzaSyD4ozPjvWdpbW8K3fiabpFwRNSTjITvim8'\n",
-    "coder = Geocoder(MAPS_API_KEY)\n",
-    "\n",
-    "NUM_CRASHES = 10\n",
-    "\n",
-    "#dont need this at the moment\n",
-    "#locations = addresses[:NUM_CRASHES].apply(lambda address : coder.geocode(address).coordinates)"
+    "Since API calls take a lot of time, we delegated this task to an external file called `GeoEncoding.py` and saved all the data to `Datasets/locations.csv` so that this data is easily accessible."
    ]
   },
   {
@@ -414,15 +406,10 @@
     }
    ],
    "source": [
-    "#using locations file to generate coordinates for heatmap\n",
-    "\n",
-    "#change this depending on how many points we have converted\n",
-    "NUM_POINTS = 3500\n",
+    "NUM_POINTS = 500\n",
     "\n",
     "locations = pd.read_csv('Datasets/locations.csv')\n",
-    "locations = locations['Coordinates'][:NUM_POINTS]\n",
-    "\n",
-    "locations"
+    "locations = locations['Coordinates'][:NUM_POINTS]"
    ]
   },
   {
@@ -552,7 +539,7 @@
     "    'longitude': list(locations.apply(lambda x : float(x[ x.find(',') + 1 : x.find(')') ])))\n",
     "})\n",
     "\n",
-    "mh.add_children(plugins.HeatMap(points_df.values, radius = 20))\n",
+    "mh.add_child(plugins.HeatMap(points_df.values, radius = 20))\n",
     "mh"
    ]
   },
@@ -931,7 +918,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
