Added Factor : Police Beats

--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -1500,6 +1500,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Police Beat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We acquired a police beat dataset from the San Diego police department which displays the areas of police beats across the San Diego county."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Variables to hold the file location/name\n",
+    "police_geo = 'Datasets/pd_beats_datasd.geojson'\n",
+    "\n",
+    "#Load jsons \n",
+    "popo = json.load(open(police_geo))\n",
+    "\n",
+    "#Open these geojson files\n",
+    "folium.GeoJson(\n",
+    "    police_geo,\n",
+    "    name='geojson'\n",
+    ").add_to(m)\n",
+    "\n",
+    "\n",
+    "folium.LayerControl().add_to(m)\n",
+    "\n",
+    "m.save(\"./mymap.html\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
