--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -1453,11 +1453,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Initially we saw lots of clumps around the smaller police beats and assumed the smaller police beats meant more concentrated crashes. However we find that the bigger the police beat, the more crashes even though there are less patrols. "
+   ]
   }
  ],
  "metadata": {
