final touches police beats

--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -1456,8 +1456,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Initially we saw lots of clumps around the smaller police beats and assumed the smaller police beats meant more concentrated crashes. However we find that the bigger the police beat, the more crashes even though there are less patrols. "
+    "Initially we saw lots of clumps around the smaller police beats and assumed the smaller police beats meant more concentrated crashes. However, we find that the bigger the police beat, the more crashes even though there are less patrols. This might indicate the police beats need to be broken up even more to even out the distribution of crashes."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
