Added Intro, Background, Ethical Considerations written by Nithya
Co-Authored-By: nithyaloka <nithyaloka@users.noreply.github.com>

--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -11,13 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction\n",
+    "# Introduction:\n",
+    "Traffic accidents lead to the death of millions every year. It is important that we, as fellow community members do our best to avoid such atrocities. This project is a way to understand and infer potential causes for traffic accidents that take place in and around our streets through an analysis of the data gathered by the government of San Diego over the years. Using this data, we would like to determine which factors are significant in determining car crashes in San Diego .\n",
     "\n",
-    "*(Overview here, this is the general summary of what we did)*\n",
+    "# Background :\n",
+    "Professor Voytek, in the first lecture of this class, talked about how Uber used Spatiotemporal dynamics to differentiate party versus business neighborhoods on the basis of the peaks of Uber demand during the weekdays and weekends and the timing of such peaks. Similarly, we want to analyze Spatiotemporal data to see which interactions of the time of year, time of day, police presence, road infrastructure and location are the most dangerous to drive in based on the number of collisions that take place during these interactions.\n",
     "\n",
-    "## Background\n",
-    "\n",
-    "Professor Voytek, in the first lecture of this class, talked about how Uber used spatiotemporal dynamics to differentiate party versus business neighborhoods on the basis of the peaks of Uber demand during the weekdays and weekends and the timing of such peaks. Similarly, we wanted to analyze spatiotemporal data to see which interactions of the time of year, time of day, and location are the most dangerous to drive through based on the number and density of collisions that take place.\n",
     "    \n",
     "#### Datasets Used:\n",
     "- Collisions: https://data.sandiego.gov/datasets/police-collisions/\n",
@@ -1517,6 +1516,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ethical Considerations\n",
+    "The data we are planning to use is from the San Diego Government Data Website. We checked the Term of Use. We need to be careful not to affect the city's intellectual Property Rights. Moreover, the accuracy of the dataset is not guaranteed. Hence, we need to measure the accuracy of the data before the analysis, including doing imputations dropping unreasonable values. There are also additional concerns that if our result will be biased since the data’s accuracy is unknown. Hence, an evaluation of the dataset is necessary. \n",
+    "It is also of concern to understand what kinds of implications the trends in the data could allude to. We study this data with the intention of understanding which parts of the city are the most prone to vehicular accidents. We want to make this goal distinct from making any kind of assumption about the people of the city. We concern ourselves with driving safety and predicting where accidents are most likely to occur. Drawing any conclusions about people of certain characteristics being more prone to accidents would be inappropriate in the context of our focus on geographic location. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1540,7 +1548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   },
   "widgets": {
    "state": {
